# covechat

./: .env.example  .gitignore  AI_README.md  Cargo.toml  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  build-wasm.ps1  compose.deploy.yml  deny.toml  deploy.ps1  deploy.sh  dev.ps1  docker-compose.yml  install.sh  package-lock.json  package.json  report.md  rust-toolchain.toml  update.sh
.github/workflows/: ci.yml
.superdesign/: design-system.md
.superdesign/init/: components.md  extractable-components.md  layouts.md  pages.md  routes.md  theme.md
apps/web/: Dockerfile  index.html  package.json  vite.config.ts
apps/web/e2e/: origin-rate-limit.mjs  smoke.mjs  unread.mjs
apps/web/src/: AdminApp.tsx  App.test.tsx  App.tsx  ContactsWorkspace.tsx  ProfileWorkspace.tsx  conversation-preferences.test.ts  conversation-preferences.ts  data.ts  i18n.ts  main.tsx  pwa-updates.ts  styles.css  ui-controls.test.tsx  ui-controls.tsx  ui-feedback.ts  ui-ripple.ts
apps/web/src/crypto-wasm/: covechat_crypto.d.ts  covechat_crypto.js  covechat_crypto_bg.wasm  covechat_crypto_bg.wasm.d.ts
apps/web/src/deployment/: DeploymentGate.tsx
apps/web/src/security/: SecurityGate.tsx  api.ts  attachments.test.ts  attachments.ts  backup.ts  contacts.test.ts  groups.test.ts  groups.ts  history-mutations.test.ts  history.test.ts  history.ts  message-content.test.ts  message-content.ts  signal.ts  trust.ts  vault.ts
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: lib.rs  mls_protocol.rs  signal_protocol.rs  signal_store.rs
deploy/: Caddyfile.example  nginx.conf  nginx.reverse-proxy.example.conf  verify.sh
docs/: CoveChat_UI_System_Design.docx  architecture.md
docs/security/: data-flow.md  key-lifecycle.md  protocol-state.md  threat-model.md
services/api/: Cargo.toml  Dockerfile
services/api/migrations/: 0001_durable_store.sql  0002_abuse_controls.sql  0003_deployment_settings.sql  0004_administration.sql  0005_contacts.sql
services/api/src/: event_bus.rs  main.rs  object_store.rs  persistence.rs  rate_limit.rs
