[workspace]
resolver = "2"
members = ["crates/crypto-core", "services/api"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/covechat/covechat"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
aws-config = { version = "=1.8.13", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "=1.123.0", default-features = false, features = ["default-https-client", "rt-tokio", "rustls"] }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
futures-util = "0.3"
hkdf = "0.12"
openmls = { version = "=0.8.1", default-features = false }
openmls_basic_credential = "=0.5.0"
openmls_memory_storage = "=0.5.0"
openmls_rust_crypto = "=0.5.1"
openmls_traits = "=0.5.0"
rand_core = "0.6"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate", "macros"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
wasm-bindgen = "0.2"
zeroize = { version = "1", features = ["derive"] }
